--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>Lab Exercise Week 14</h3>
         </header>
         <section>
-            <!-- <form
+            <form
                 action="https://formspree.io/f/xleaeydl"
                 method="POST"
             >
@@ -31,7 +31,7 @@
                 </label>
                 <button type="submit">Send</button>
             </form>
-        </section> -->
+        </section>
     </div>
 </body>
 </html>
