--- a/index.html
+++ b/index.html
@@ -13,25 +13,34 @@
     <div class="container">
         <!-- modify this form HTML and place wherever you want your form -->
         <header>
-            <h1>Form Messanger</h1>
+            <h1>Form Messenger</h1>
             <h3>Lab Exercise Week 14</h3>
         </header>
         <section>
-            <form
-                action="https://formspree.io/f/xleaeydl"
-                method="POST"
-            >
-                <label id="email">
-                    Your email:
-                    <input type="email" name="_replyto">
-                </label>
-                <label>
-                    Your message:
-                    <textarea name="message"></textarea>
-                </label>
-                <button type="submit">Send</button>
-            </form>
+            <article>
+            <h1>You've Been Invited!</h1>
+            <p>Please fill out the following form to accept your invitation to
+                Tony's Covid Friendly Party!
+            </p>
+            <p>Must fill out:</p>
+            <ul>
+                <li>Your Name</li>
+                <li>Your email</li>
+                <li>Your message (tell us if you're coming)</li>
+            </ul>
+            <p>Then hit "send" at the bottom. That's it!</p>
+                <form method="POST" action="https://simple-form.com/matthewdandar@gmail.com">
+                    <label>Your Name</label>
+                    <input type="text" name="name" placeholder="First, Last" id="name"/>
+                    <label for="email">Your email</label>
+                    <input type="email" name="replyTo" placeholder="youremail@domain.com" id="email"/>
+                    <label for="message">Your message</label>
+                    <textarea name="message" placeholder="Up to 400 words"></textarea>
+                    <input type="submit" value="Send" />
+                </form>
+            </article>
         </section>
+        <footer>Form Messenger ©, Created By: Matthew Dandar</footer>
     </div>
 </body>
 </html>
