added email screenshot

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>Your message (tell us if you're coming)</li>
             </ul>
             <p>Then hit "send" at the bottom. That's it!</p>
-                <form method="POST" action="https://simple-form.com/matthewdandar@gmail.com">
+                <form method="POST" action="https://simple-form.com/your-email-here">
                     <label>Your Name</label>
                     <input type="text" name="name" placeholder="First, Last" id="name"/>
                     <label for="email">Your email</label>
