updated send button with brighter color

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <input type="email" name="replyTo" placeholder="youremail@domain.com" id="email"/>
                     <label for="message">Your message</label>
                     <textarea name="message" placeholder="Up to 400 words"></textarea>
-                    <input type="submit" value="Send" />
+                    <input type="submit" value="Send" id="send"/>
                 </form>
             </article>
         </section>
